welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: not found: value n
  for (i<- 1 to n-1){
                ^Array1:11: error: not found: value couleurs
    couleurs(i)=getCouleurSol()
    ^Array1:14: error: not found: value couleurs
  couleurs(n)=getCouleurSol()
  ^Array1:14: error: not found: value n
  couleurs(n)=getCouleurSol()
           ^